force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Quote__c</fullName>
    <description>Quote to which this line item belongs.</description>
    <inlineHelpText>Quote to which this line item belongs..</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>