force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ship_Via</valueSetName>
    </valueSet>
</CustomField>