force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sold_By_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Commission_Percent__c</fullName>
    <label>Sold By Rep Commission Percent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>