force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sourcing_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Restrictions__c</fullName>
    <label>Sourcing Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>