force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Change_Order_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHNG ORD</fullName>
                <label>Change Order Processed, New Order Entered</label>
            </value>
            <value>
                <fullName>CUST REQ</fullName>
                <label>Customer Requested to Cancel Order</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Cancel Order Due to Internal Mistake</label>
            </value>
            <value>
                <fullName>NON PMT</fullName>
                <label>Cancel Order Due to Lack of Payment By Customer</label>
            </value>
            <value>
                <fullName>CHG ORDER</fullName>
                <label>Change Order in Process</label>
            </value>
            <value>
                <fullName>CUST HOLD</fullName>
                <label>Waiting for Approval from Customer to Proceed with Production</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>