force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <label>Sub Group</label>
    <length>225</length>
    <type>Text</type>
</CustomField>