force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Supply_Code__c.field-meta.xml
<CustomField>
    <fullName>Supply_Code__c</fullName>
    <label>Supply Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IPT</fullName>
                <label>Int Purch Trans</label>
            </value>
            <value>
                <fullName>IPD</fullName>
                <label>Int Purch Dir</label>
            </value>
            <value>
                <fullName>IO</fullName>
                <label>Invent Order</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <label>Shop Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>