force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Tag_Number__c</fullName>
    <description>Tagging Info sent to ERP system (IFS)</description>
    <label>Tag Number</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>