force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Technical_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review_Comments__c</fullName>
    <label>Technical Review Comments</label>
    <type>TextArea</type>
</CustomField>