force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Technical_Review_Source__c.field-meta.xml
<CustomField>
    <fullName>Technical_Review_Source__c</fullName>
    <label>Technical Review Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Triggered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>