force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_List_Price_Cust_Curr__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price_Cust_Curr__c</fullName>
    <formula>Regular_Unit_Price_Each__c * SBQQ__Quantity__c *  SBQQ__Quote__r.Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Regular_Unit_Price_Each__c * SBQQ__Quantity__c *  SBQQ__Quote__r.Conversion_Rate__c</inlineHelpText>
    <label>Total List Price (Cust. Curr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>