force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_NonDiscountable__c.field-meta.xml
<CustomField>
    <fullName>Total_NonDiscountable__c</fullName>
    <label>Total NonDiscountable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>