force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Quantity_RD__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_RD__c</fullName>
    <label>Total Quantity RD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>