force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Vendor Code for ERP system (IFS).  By default the vendor will be CDC.</description>
    <label>Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>