force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Wanted_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Wanted_Delivery_Date__c</fullName>
    <label>Wanted Delivery Date</label>
    <type>Date</type>
</CustomField>