force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SBQQ__Quote__c</columns>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>SBQQ__ProductCode__c</columns>
    <columns>SBQQ__ProductFamily__c</columns>
    <columns>SBQQ__ProductName__c</columns>
    <columns>Net_Price_Each__c</columns>
    <columns>SBQQ__NetPrice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>CDC</value>
    </filters>
    <label>All</label>
</ListView>