force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Line_Status__c</columns>
    <columns>Change_Order_Status__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Change_Order_Status__c</field>
        <operation>equals</operation>
        <value>Cancel</value>
    </filters>
    <label>All</label>
</ListView>