force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/Engineering_Released.listView-meta.xml
<ListView>
    <fullName>Engineering_Released</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>Brand__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Product_Planning_Status__c</columns>
    <columns>Engineering_Status__c</columns>
    <columns>Discountable_List_Price__c</columns>
    <columns>Non_Discountable_List_Price__c</columns>
    <columns>Net_Price_Each__c</columns>
    <columns>PARTNUMBER__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engineering_Status__c</field>
        <operation>equals</operation>
        <value>Released</value>
    </filters>
    <label>Engineering - Released</label>
</ListView>