force-app/main/default/objects/SBQQ__QuoteLine__c/listViews/My_Quote_Lines.listView-meta.xml
<ListView>
    <fullName>My_Quote_Lines</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Quote Lines</label>
</ListView>